[tool.poetry]
name = "python-viper"
version = "0.1.0a1"
description = "Python configuration with fangs! A Python port of github.com/spf13/viper"
authors = ["francoposa <franco@francoposa.io>"]
license = "MIT"
packages = [
    { include = "viper"}
]

[tool.poetry.dependencies]
python = "^3.8"
click = "8.*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
ipython = "*"
isort = "*"
mypy = "*"
pylint = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
